Rfc80/clinical data counts refactor (#11084)
* :recycle: Refactor NewStudyViewFilterUtil

* Update SQL to return ClinicalDataCountItem.. NA's not implemented

* Add NA counts to SQL for clinical data counts

* Remove unused methods

* Fix unit tests for clinical data counts

* Remove unused import

* Fix Review Comments

---------

Co-authored-by: alisman <lisman.aaron@gmail.com>